# kbmod

./: #setup.bash#  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  createImage.py  demo.ipynb  eigen_test.cpp  install.bash  install.sh  makefile  out.txt  pyproject.toml  run  setup.bash  setup.cfg  setup.py  test.ecsv  trajectory_utils.py
.github/workflows/: add_issue_to_project  asv-pr.yml  build_docs.yaml  canary_builds.yaml  pr_tests.yaml  publish-benchmarks-pr.yml  test_build.yaml
analysis/: .gitignore  analysis_utils.py  analyzeImage.py  batchSearch.py  convenience_utils.py  createImage.py  create_stamps.py  ephem_utils.py  evaluate.py  fake_search.py  filter_results.py  filter_utils.py  final_curves.pkl  final_results.csv  fullSearch.py  image_info.py  jointfit_functions.py  kbmod_info.py  known_objects.py  orbit_utils.py  precovery_utils.py  run_search.py  searchImage.py  trajectoryFiltering.py  trajectory_utils.py
analysis/classification/: asteroids.ipynb  classify.py
analysis/mpc_codes/: create_mpc_submission.py
analysis/rawGenerated/: batchGenerate.py  rawSearch.py
analysis/resultsGenerated/: fullSearch.py
analysis/stamps/: clear_stamps.sh
analysis/stampsGenerated/: batchStamps.py  makeStamps.py
benchmarks/: asv.conf.json  bench_filter_cluster.py  bench_filter_stamps.py  bench_filter_stats.py  bench_masking.py  benchmarks.py
code/: analyzeImage.py  createImage.py  searchImage.py
code/kbmodGPU/: .cproject  appendPath.sh  parameters.config  parameters2.config  rtPath.sh
data/: README.md  demo_config.yml  kbmod_model.h5  readme.txt
data/demo/: 000000.fits  000001.fits  000002.fits  000003.fits  000004.fits  000005.fits  000006.fits  000007.fits  000008.fits  000009.fits  results.txt
data/fake_results/: all_ps_DEMO.npy  all_times_DEMO.txt  config_DEMO.yml  filtered_likes_DEMO.txt  lc_DEMO.txt  lc_index_DEMO.txt  phi_DEMO.txt  ps_DEMO.txt  psi_DEMO.txt  results.ecsv  results_DEMO.txt
data/fake_results_noisy/: filtered_likes_DEMO.txt  lc_DEMO.txt  lc_index_DEMO.txt  phi_DEMO.txt  ps_DEMO.txt  psi_DEMO.txt  results_DEMO.txt  times_DEMO.txt
data/results/: test1.config
data/small/: 000000.fits  000004.fits  000005.fits  000006.fits  000007.fits  000008.fits  000009.fits
data/stamps/: c0p1001_2289v300_0.tif  c0p1001_3341v296_237.tif  c0p1003_1882v378_33.tif  c0p1003_3680v314_149.tif  c0p1003_3681v311_135.tif  c0p1004_3680v297_148.tif  c0p1008_1087v341_126.tif  c0p1008_2709v318_158.tif  c0p1009_1087v331_129.tif  c0p1010_1885v307_5.tif  c0p1011_2987v421_238.tif  c0p1012_2710v287_149.tif  c0p1012_2989v411_223.tif  c0p1013_2757v346_37.tif  c0p1015_2758v315_11.tif  c0p1016_1867v268_133.tif  c0p1017_2752v315_104.tif  c0p1017_2759v299_10.tif  c0p1021_2321v276_169.tif  c0p1022_1872v451_195.tif  c0p1027_898v241_215.tif  c0p1028_898v224_222.tif  c0p1030_2927v468_0.tif  c0p1034_2922v437_78.tif  c0p1034_2923v439_62.tif  c0p1035_1879v358_147.tif  c0p1036_1051v459_125.tif  c0p1036_1880v343_141.tif  c0p1036_2921v388_76.tif  c0p1037_1052v453_115.tif  c0p1037_1879v345_157.tif  c0p1038_1052v443_121.tif  c0p1040_2082v218_217.tif  c0p1042_1054v422_107.tif  c0p1043_1055v410_88.tif  c0p1044_1057v398_64.tif  c0p1045_1055v387_83.tif  c0p1045_1056v389_70.tif  c0p1045_3246v399_286.tif  c0p1045_3247v401_256.tif  (+4007 more)
docs/doc/: flags.txt
docs/source/: analysis_utils.rst  conf.py  evaluate.rst  image_info.rst  index.rst  jointfit_functions.rst  kbmod_info.rst  known_objects.rst  result_list.rst  run_search_referenceapi.rst  search_referenceapi.rst
examples/: example_fake_run.py  example_search.py  fake_analysis.ipynb  fake_plots.ipynb  kbmod_analysis_demo-Copy1.ipynb  kbmod_analysis_demo.ipynb  region_search_example.py  sort_fakes.py
kbmod/: __init__.py  analysis_utils.py  configuration.py  data_interface.py  fake_data_creator.py  image_collection.py  masking.py  run_search.py  trajectory_utils.py  wcs_utils.py  work_unit.py
notebooks/: .gitignore  01_results.csv  03_results.csv  Batch Test.ipynb  Easy_Search.ipynb  Fraser_Comparison.ipynb  HITS_Main_Belt_Comparison.ipynb  HITS_Main_Belt_Example.ipynb  HITS_new_kuiper_objects.ipynb  Image Compression Tests.ipynb  KBMOD_Demo.ipynb  Kbmod_Documentation.ipynb  Kbmod_Reference.ipynb  MultiSearch-Bryce.ipynb  MultiSearch.ipynb  Multi_Res_Search_Test.ipynb  Pool_Test.ipynb  Quick_Test.ipynb  Region_Search_Batch.ipynb  Search.py  Search_View-Bryce.ipynb  Search_View.ipynb  TrajectoryExplorer.ipynb  Untitled.ipynb  calc_ecliptic_trajectories.ipynb  calc_ecliptic_trajectory.py  clearImages.sh  create_fake_data.ipynb  ephem_utils.ipynb  gather_results.py  gather_results.py~  get_HITS_stamps.ipynb  hits_found_objects.csv  join_known_objects_example.ipynb  kbmod_CNN.ipynb  kbmod_analysis_demo.ipynb  kbmod_demo-Copy1.ipynb  kbmod_demo.ipynb  kbmod_evaluate_clustering.ipynb  kbmod_filtering.ipynb  (+25 more)
search/: .cproject  .project
search/pybinds/: .gitignore  CMakeCache.txt  CMakeLists.txt  Example.ipynb  Makefile  classBindings.cpp  cmake_install.cmake  kbmodpy.py
search/pybinds/.ipynb_checkpoints/: Example-checkpoint.ipynb
search/src/: common.h  (+28 more)
src/: debug_timer.h  image_stack.h  kernel_testing_helpers.cpp  psf.cpp  psf.h  psi_phi_array_utils.h  raw_image.cpp  stack_search.h  stamp_creator.cpp
tests/: .test_search.py.swp  benchmark.py  clear.sh  diff_test.py  dump_headers.py  fake_data_creator.py  hello  hello.cpp  manual_test_fake_orbits.py  psfTest.cpp  regression_test.py  run_tests.bash  test.txt  test_analysis_utils.py  test_basic_filters.py  test_bilinear_interp.py  test_brightness_filters.py  test_butlerstd.py  test_calc_barycentric_corr.py  test_candidate_generator.py  test_clustering_filters.py  test_clustering_grid.py  test_collection.py  test_common.py  test_configuration.py  test_core_search_exact.py  test_cpu_search_algorithms.py  test_data_interface.py  test_debug_timer.py  test_dtraj_bounds.py  test_dtraj_regions.py  test_end_to_end.py  test_evaluate.py  test_fake_data_creator.py  test_fake_results_creator.py  test_file_utils.py  test_filtering.py  test_filters.py  test_fits_export.py  test_geom.py  (+68 more)
(+1049 files in other folders)
