[build-system]
requires = ["packaging>=21",
            "setuptools>=60",
            "setuptools_scm>=8.0",
            "pybind11>=2.10.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "src/kbmod/_version.py"

[project]
name = "kbmod"
authors = [{name="KBMOD Developers"}, ]
description = "Moving object detection library implemented on GPUs"
license = {file="LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["astronomy", "astrophysics", "image_processing", "gpu"]
classifiers = [
    "Development Status :: 3 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: C++",
    "Environment :: GPU",
    "Environment :: GPU :: NVIDIA CUDA",
    "Environment :: GPU :: NVIDIA CUDA :: 11",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Image Processing"
]
dynamic = ["version"]
dependencies = [
    "astropy>=6.1",
    "astroquery>=0.4.7",
    "dask>=2024.4.1",    
    "jax",
    "matplotlib>=3.9",
    "numpy>=2.0",
    "reproject",
    "scikit_learn>=1.5.0",    
    "scipy>=1.13",
    "koffi>=0.1.1",
    "jplephem",
    "PyYAML>=6.0"
]

[project.urls]
Documentation = "https://epyc.astro.washington.edu/~kbmod/"
Repository = "https://github.com/dirac-institute/kbmod"
"Bug Tracker" = "https://github.com/dirac-institute/kbmod/issues"
Changelog = "https://epyc.astro.washington.edu/~kbmod/project_details/release_notes.html"

[project.optional-dependencies]
analysis = [
    "ephem>=4.1",
    "ipywidgets>=8.0",
    "pandas>=2.2",
]
docs = [
    "sphinx>=8.0",
    "sphinx-gallery",
    "sphinx-codeautolink",
    "sphinx-design",
    "numpydoc",
    "pydata_sphinx_theme",
    "nbsphinx",
    # See https://pandoc.org/installing.html
    # Also this works:
    #   conda install pandoc
    # Neither of the following pypi packages actually installs the pandoc binary
    #   pandoc
    #   pypandoc-binary
    "ipython"
]
tests = [
    "black[jupyter]"
]

# formatting configuration as specified at developer.lsst.io
[tool.black]
line-length = 110
target-version = ["py38"]
extend-exclude = "data/|docs/|include/|lib/|setup.py"

[tool.isort]
profile = "black"
line_length = 110

