[build-system]
requires = ["packaging>=21",
            "setuptools>=60",
            "setuptools_scm>=8.0",
            "pybind11>=2.10.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "src/kbmod/_version.py"

[project]
name = "kbmod"
authors = [{name="KBMOD Developers"}, ]
description = "Moving object detection library implemented on GPUs"
license = {file="LICENSE"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["astronomy", "astrophysics", "image_processing", "gpu"]
classifiers = [
    "Development Status :: 3 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: C++",
    "Environment :: GPU",
    "Environment :: GPU :: NVIDIA CUDA",
    "Environment :: GPU :: NVIDIA CUDA :: 11",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Image Processing"
]
dynamic = ["version"]
dependencies = [
    "astropy>=5.1",
    "joblib>=1.4",
    "jplephem",
    "matplotlib>=3.5",
    "numba",
    "numpy<2.0",
    "pandas",
    "psutil",
    "pyarrow",
    "reproject",
    "scipy>=1.9.2",
    "scikit_learn>=1.0.0",
    "shapely",
    "torch",
    "torchvision",
    "tqdm",
    "PyYAML>=6.0"
]

[project.scripts]
kbmod-create-test-data = "kbmod_cmdline.kbmod_create_test_data:main"
kbmod-filter = "kbmod_cmdline.kbmod_filter:main"
kbmod-rater = "kbmod_cmdline.kbmod_results_rater:main"
kbmod-stamps = "kbmod_cmdline.kbmod_stamps:main"
kbmod-stats = "kbmod_cmdline.kbmod_stats:main"
kbmod-version = "kbmod_cmdline.kbmod_version:main"

[project.urls]
Documentation = "https://epyc.astro.washington.edu/~kbmod/"
Repository = "https://github.com/dirac-institute/kbmod"
"Bug Tracker" = "https://github.com/dirac-institute/kbmod/issues"
Changelog = "https://epyc.astro.washington.edu/~kbmod/project_details/release_notes.html"

[project.optional-dependencies]
analysis = [
    "ephem>=4.1",
    "ipympl",
    "ipywidgets>=8.0",
    "matplotlib>=3.6.1",
    "pandas>=1.5.1",
]
docs = [
    "sphinx",
    # https://github.com/spatialaudio/nbsphinx/issues/655
    "sphinx-gallery<0.11",
    "sphinx-codeautolink",
    "sphinx-design",
    "numpydoc",
    "pydata_sphinx_theme",
    "nbsphinx",
    # See https://pandoc.org/installing.html
    # Also this works:
    #   conda install pandoc
    # Neither of the following pypi packages actually installs the pandoc binary
    #   pandoc
    #   pypandoc-binary
    "ipython"
]
tests = [
    "black[jupyter]"
]

# formatting configuration as specified at developer.lsst.io
[tool.black]
line-length = 110
target-version = ["py39", "py310", "py311"]
extend-exclude = "data/|docs/|include/|lib/|setup.py"

[tool.isort]
profile = "black"
line_length = 110

