[metadata]
name = kbmod
authors = [
    { name = "KBMoD Developers", email="tmp@email.email"},
    ]
description = Moving object detection library implemented on GPUs.
long_description = file: README.md
license = BSD 2_Clause Simplified License
license_files = LICENSE
requires_python = >=3.6
keywords = astronomy, astrophysics, image_processing, gpu
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: C++
    Environment :: GPU
    Environment :: GPU :: NVIDIA CUDA
    Environment :: GPU :: NVIDIA CUDA :: 11.7
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Image Processing

[[metadata.urls]]
Source = https://github.com/dirac_institute/kbmod
# Documentation = ?

[options]
# set packages to find: to automatically find all sub_packages
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#setuptools_specific_configuration
# This does not seem to be working out? It does for astropy?
#packages = find:
package_dir =
    =src
packages =
    kbmod
    kbmod.search
zip_safe = "False"
# WHY DOES PACKAGING NOT WORK IN THIS LIST?!
install_requires = 
    astropy>=5.1
    astroquery>=0.4.6
    ipywidgets>=8.0
    ephem>=4.1
    matplotlib>=3.6.1
    mpmath>=1.2.1
    numba>=0.56
    numpy>=1.18
    pandas>=1.5.1
    scipy>=1.9.2
    scikit_learn>=1.0.0
    scikit_image>=0.19.3
    tensorflow>=2.9
    tqdm>=4.6