[metadata]
name = kbmod
author = KBMoD Developers
description = Moving object detection library implemented on GPUs.
long_description = file: README.md
license = BSD 2_Clause Simplified License
license_files = LICENSE
requires_python = >=3.6
keywords = astronomy, astrophysics, image_processing, gpu
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: C++
    Environment :: GPU
    Environment :: GPU :: NVIDIA CUDA
    Environment :: GPU :: NVIDIA CUDA :: 11.7
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Image Processing

[[metadata.urls]]
Source = https://github.com/dirac_institute/kbmod
# Documentation = ?

[options]
# set packages to find: to automatically find all sub_packages, but it's not working?
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#setuptools_specific_configuration
#packages = find:
package_dir =
    =src
packages =
    kbmod
    kbmod.search
    kbmod.analysis
zip_safe = "False"
install_requires = 
    astropy>=5.1
    astroquery>=0.4.6
    matplotlib>=3.5
    numpy>=1.18
    pandas>=1.5.1
    scipy>=1.9.2
    scikit_learn>=1.0.0
    koffi>=0.1.1

[options.extras_require]
analysis =
    tqdm>=4.6
    tensorflow>=2.9
    matplotlib>=3.6.1
    numba>=0.56
    ipywidgets>=8.0
    ephem>=4.1
docs =
    sphinx
    numpydoc
    pydata-sphinx-theme
tests =
    black